<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/actualizar"
        android:icon="@drawable/ic_sync"
        android:title="@string/actualizar"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/borrar"
        android:icon="@drawable/ic_trash"
        android:title="@string/borrar_alertas"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/ajustes"
        android:icon="@drawable/ic_settings"
        android:title="@string/ajustes"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/cuenta"
        android:icon="@drawable/ic_perfil"
        android:title="@string/cuenta"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/version"
        android:enabled="false"
        android:title="@string/version"
        app:showAsAction="never" />

</menu>