<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txtTipoAlarma"
            android:layout_width="90dp"
            android:layout_height="match_parent"
            android:layout_margin="2.5dp"
            android:textColor="@color/colorPrimary"
            android:text="@string/tipo_de_alarma"
            android:textSize="18sp" />

        <Spinner
            android:id="@+id/selectTipoAlarma"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="2.5dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txtPrioridad"
            android:layout_width="90dp"
            android:layout_height="match_parent"
            android:textColor="@color/colorPrimary"
            android:layout_margin="2.5dp"
            android:text="@string/prioridad_alarma"
            android:textSize="18sp" />

        <Spinner
            android:id="@+id/selectPrioridad"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="2.5dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txtEmpresa"
            android:layout_width="90dp"
            android:layout_height="match_parent"
            android:textColor="@color/colorPrimary"
            android:layout_margin="2.5dp"
            android:text="@string/empresa"
            android:textSize="18sp" />

        <Spinner
            android:id="@+id/selectEmpresa"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="2.5dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txtSede"
            android:layout_width="90dp"
            android:layout_height="match_parent"
            android:textColor="@color/colorPrimary"
            android:layout_margin="2.5dp"
            android:text="@string/sede"
            android:textSize="18sp" />

        <Spinner
            android:id="@+id/selectSede"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="2.5dp" />

    </LinearLayout>
</LinearLayout>